[tool.poetry]
name = "llm-math-reasoning"
version = "0.1.0"
description = ""
authors = ["Gabriel Altay <gabriel.altay@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipython = "^8.28.0"
openai = "^1.51.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
